--- a/BlazorEcommerce/Server/appsettings.json
+++ b/BlazorEcommerce/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionString": "DATA SOURCE=xxxxx,1433;UID=blazor;PWD=12345678a;DATABASE=blazorecommerce;TrustServerCertificate=True;encrypt=false"
+    "ConnectionString": "DATA SOURCE=manager.bbytegroup.com,1433;UID=blazor;PWD=12345678a;DATABASE=blazorecommerce;TrustServerCertificate=True;encrypt=false"
   },
   "Logging": {
     "LogLevel": {
