026 Implement the Search Component

--- a/BlazorEcommerce/Server/BlazorEcommerce.Server.csproj
+++ b/BlazorEcommerce/Server/BlazorEcommerce.Server.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="Services\CategoryService\" />
     <Folder Include="Services\ProductService\" />
   </ItemGroup>
 
