04 It's all about Products - Blazor WebAssembly in Action: Done

--- a/BlazorEcommerce/Server/BlazorEcommerce.Server.csproj
+++ b/BlazorEcommerce/Server/BlazorEcommerce.Server.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Services\CategoryService\" />
+    <Folder Include="Services\CartService\" />
     <Folder Include="Services\ProductService\" />
   </ItemGroup>
 
