05 Let's add Users - Authentication with JSON Web Tokens: hoàn thành

--- a/BlazorEcommerce/Server/appsettings.json
+++ b/BlazorEcommerce/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "G+KbPeShVmYq3t6w"
+  },
   "ConnectionStrings": {
     "ConnectionString": "DATA SOURCE=manager.bbytegroup.com,1433;UID=blazor;PWD=12345678a;DATABASE=blazorecommerce;TrustServerCertificate=True;encrypt=false"
   },
