--- a/BlazorEcommerce/Server/BlazorEcommerce.Server.csproj
+++ b/BlazorEcommerce/Server/BlazorEcommerce.Server.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.8" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
@@ -31,6 +32,7 @@
     <Folder Include="Data\" />
     <Folder Include="Services\CategoryService\" />
     <Folder Include="Services\CartService\" />
+    <Folder Include="Services\AuthService\" />
     <Folder Include="Services\ProductService\" />
   </ItemGroup>
 
