--- a/BlazorEcommerce/Client/BlazorEcommerce.Client.csproj
+++ b/BlazorEcommerce/Client/BlazorEcommerce.Client.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <Folder Include="Services\CartService\" />
     <Folder Include="Services\AuthService\" />
+    <Folder Include="Services\OrderService\" />
   </ItemGroup>
 
 </Project>
